<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.derekmorrison.alexbooks.AlexAbout"
    tools:showIn="@layout/activity_alex_about"
    android:background="@color/material_grey_300">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_text1"
        android:id="@+id/textView1"
        android:layout_gravity="center_horizontal"
        android:elevation="6dp"
        android:padding="@dimen/material_drawer_item_padding"
        android:layout_marginBottom="@dimen/material_drawer_vertical_padding"
        android:background="@color/bright_foreground_material_dark" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_text2"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:elevation="6dp"
        android:padding="@dimen/material_drawer_item_padding"
        android:layout_marginBottom="@dimen/material_drawer_vertical_padding"
        android:background="@color/bright_foreground_material_dark" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_text3"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:elevation="6dp"
        android:padding="@dimen/material_drawer_item_padding"
        android:layout_marginBottom="@dimen/material_drawer_vertical_padding"
        android:background="@color/bright_foreground_material_dark" />
</LinearLayout>
